--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to WorldFlags!</h1>
-    <p>We have the best flags around! Click <a>here</a>to check out our catalogue</p>
+    <p>We have the best flags around! Click <a href="/Flags/">here</a> to check out our catalogue!</p>
 </div>
