--- a/Views/Flags/Index.cshtml
+++ b/Views/Flags/Index.cshtml
@@ -3,7 +3,20 @@
 @{
     ViewData["Title"] = "Index";
 }
+<style>
+    header {
+        background-color: RGBA(51, 162, 255, 0.6); /*this does nothing no matter what I try*/
+        height: auto;
+    }
 
+    footer {
+        background-color: RGBA(255, 0, 0, 0.6);
+    }
+
+    body {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+</style>
 <h1>Index</h1>
 
 <p>
