--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,22 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<style>
+    .header {
+        background-color: RGBA(51, 162, 255, 0.6);
+        height: auto;
+    }
 
+    footer {
+        background-color: RGBA(255, 0, 0, 0.6);
+    }
+
+    body {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+</style>
 <div class="text-center">
     <h1 class="display-4">Welcome to WorldFlags!</h1>
-    <p>We have the best flags around! Click <a href="/Flags/">here</a> to check out our catalogue!</p>
+    <p>We have the best flags around! Click <a href="/Flags/">here</a> to check out our catalogue! <br />We also have a page to show off some of our staff office and more!
+            check that out<a href="/AboutUs/"> here!</a></p>
 </div>
