--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,9 +6,11 @@
     <title>@ViewData["Title"] - WorldFlags</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    
 </head>
 <body>
     <header>
+        <div class="header">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WorldFlags</a>
@@ -35,6 +37,7 @@
                 </div>
             </div>
         </nav>
+         </div>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
